Fix: Change the shadow clipping div on dashboards.

--- a/packages/dashboards/app/styles/navi-dashboards/components/navi-dashboard.less
+++ b/packages/dashboards/app/styles/navi-dashboards/components/navi-dashboard.less
@@ -4,6 +4,8 @@
  */
 
 .navi-dashboard {
+  overflow: hidden;
+
   &__breadcrumb {
     font-size: @font-size-base;
     padding-left: 10px;
